Fix mega fish boss